# Mutter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  models.yaml  pyproject.toml  soul.md
client/: cli.py  menubar.py  recorder.py
server/: agent.py  alarms.py  config.py  digest.py  llm.py  main.py  notes.py  query.py  router.py  tasks.py  tools.py  whisper_client.py
